@@ -1140,7 +1140,7 @@
 80867123 intel
 80867125 intel
 80867800 i740
-80eebeef vesa
+80eebeef vboxvideo
 edd8a091 ark
 edd8a099 ark
 edd8a0a1 ark
