@@ -1,3 +1,7 @@
+2009-02-02  Fatih Aşıcı  <fatih@pardus.org.tr>
+		* data/DriversDB, zorg/{config,probe}.py:
+		Add support for VirtualBox video and mouse drivers.
+
 2009-01-22  Fatih Aşıcı  <fatih@pardus.org.tr>
 		* zorg/parser.py: Fix a regression introduced with
 		type/instance changes.
